Bug 295517 - Build fails in uriloader/extandler under BeOS. r=thesuckiestemail@yahoo.se (BeOS only). a=asa